--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,18 @@ package-lock.json
 
 # Android memory profiler files
 *.hprof
+
+
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
