--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -20,6 +22,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "typescript": "~4.3.5"
   },
   "private": true
