--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.20.5",
+    "@react-native-community/checkbox": "^0.5.14",
     "expo": "~46.0.13",
+    "expo-checkbox": "~2.2.0",
     "expo-status-bar": "~1.4.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
